# fricktrader

./: .claude-rules  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SOPHISTICATED_DASHBOARD_PLAN.md  check_system_status.sh  main_dashboard.py  pyproject.toml  requirements.txt  setup_environment.sh  start.sh  start_dashboard.py  start_trading_system.sh  stop_trading_system.sh
.claude/agents/: codebase-cleaner-tester.md
archive/: CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  Makefile  main.py  mypy.ini  pyproject.toml  sophisticated_dashboard_v2.py  sophisticated_dashboard_v3.py
archive/custom_strategies/: momentum_scalper.py  my_custom_advanced_strategy.py  my_rsi_strategy.py  strategy_to_focus_on_short_ter.py
archive/dashboards/: main_dashboard.py
archive/docs/: COMPREHENSIVE_STRATEGY_ROADMAP.md  TEST_SUMMARY.md
archive/requirements/: base.txt  development.txt  production.txt
archive/scripts/: cleanup_old_logs.py  cleanup_project.py  codebase_cleanup.py  seed_demo_data.py  setup.py  setup_environment.sh
config/: adaptive_config.json  config.json  conservative_config.json  development.yaml  improved_config.json  minimal_config.json  production.yaml  simple_config.json
docs/: CLEANUP_SUMMARY.md  PLATFORM_INTEGRATIONS.md  README.md  SYSTEM_ARCHITECTURE.md  TRADER_VALIDATION.md  UI_ERROR_HANDLING_IMPROVEMENTS.md  UI_FIXES_SUMMARY.md  UI_IMPROVEMENTS_SUMMARY.md
scripts/: cleanup_old_logs.py  codebase_cleanup.py  comprehensive_backtest_suite.py  demo_multi_bot_system.py  demo_regime_analyzer.py  demo_sophisticated_system.py  log_rotation.sh  realistic_backtest_validation.py  start_multi_strategy.py  strategy_testing_framework.py  test_alternative_data.py  test_openbb_functionality.py  test_openbb_imports.py  test_openbb_modular.py  test_technical_stops.py  test_trading_system.py
src/: __init__.py  advanced_signal_engine.py  algorithmic_signal_engine.py  altcoin_strategy_optimizer.py  custom_strategy_manager.py  live_trading_engine.py  multi_strategy_trader.py  signal_execution_engine.py  strategy_framework.py  unified_data_pipeline.py
src/approval/: __init__.py  (+1 more)
(+118 files in other folders)
