[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mvp-crypto-trading-system"
description = "An automated cryptocurrency trading system with manual approval workflows"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "MVP Crypto Team", email = "contact@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"
dependencies = [
    "freqtrade==2025.6",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.11.0",
    "ta-lib>=0.4.24",
    "pandas-ta>=0.3.14b0",
    "ccxt>=4.4.98",
    "python-binance>=1.0.17",
    "python-dotenv>=0.21.0",
    "click>=8.1.0",
    "requests>=2.28.0",
    "flask>=2.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.9.0",
    "pydantic>=2.0.0",
    "websockets>=10.4",
    "asyncio-mqtt>=0.12.1",
    "tweepy>=4.12.0",
    "praw>=7.7.0",
    "discord.py>=2.1.0",
    "openbb>=4.1.0",
    "openbb-charting>=1.0.0",
    "etherscan-python>=2.0.0",
    "textblob>=0.17.1",
    "vaderSentiment>=3.3.2",
    "schedule>=1.2.0",
    "apscheduler>=3.10.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yourusername/trading_master"
"Bug Tracker" = "https://github.com/yourusername/trading_master/issues"

[project.scripts]
trading-dashboard = "web_ui.app:main"
trading-approval = "approval.manual_approval_manager:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]